@@ -2,6 +2,8 @@
 
 	* man/: Language codes should be in ISO 639-1 format.
 
+	* R/textdoccol.R (asPlain): Preserve local meta data.
+
 2008-01-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (writeCorpus): Function for writing a corpus
